--- a/css/main.css
+++ b/css/main.css
@@ -688,6 +688,137 @@ header {
     align-items: center;
     flex-direction: column;
 }
+.desktop-cart-pop-up{
+    display: none;
+    width: 465px;
+    padding: 30px 20px;
+    position: absolute;
+    border-radius: 10px;
+    background: linear-gradient(0deg, rgba(255, 255, 255, 0.48), rgba(255, 255, 255, 0.48)), linear-gradient(0deg, rgba(255, 255, 255, 0.48), rgba(255, 255, 255, 0.48)), #F8F8F8;
+    box-shadow: 0px 8px 25px rgba(0, 0, 0, 0.13);
+    top: 45px;
+    left: -410px;
+    z-index: 100000;
+}
+#cart-nav-item:hover .desktop-cart-pop-up{
+    display: block;
+}
+.desktop-cart-pop-up_cart-empty{
+    margin: 30px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.desktop-cart-pop-up_cart-empty_image{
+    width: 40px;
+    margin: 0 10px 0 0;
+}
+.desktop-cart-pop-up_cart-empty_text{
+    text-align: left;
+}
+.desktop-cart-pop-up_cart-empty_text p{
+    font-size: 18px;
+    font-family: var(--Fira-font);
+}
+.desktop-cart-pop-up_cart-empty_text span{
+    font-size: 14px;
+    font-family: var(--Open-font);
+}
+.desktop-cart-pop-up_title{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: var(--Fira-font);
+    margin: 0 0 16px 0;
+}
+.desktop-cart-pop-up_list{
+    margin: 0 0 28px 0;
+}
+.desktop-cart-pop-up_list-item{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin: 0 0 16px 0;
+}
+.desktop-cart-pop-up_list-item:last-child{
+    margin: 0;
+}
+.desktop-cart-pop-up_list-item-text{
+    text-align: left;
+}
+.desktop-cart-pop-up_list-item-text-title{
+    font-family: var(--Open-font);
+    color: #000;
+    font-size: 18px;
+    font-weight: 400;
+    margin: 0 0 3px 0;
+}
+.desktop-cart-pop-up_list-item-text-model{
+    font-family: var(--Fira-font);
+    font-size: 13px;
+    margin: 0 0 3px 0;
+    color: var(--color-text-darker);
+}
+.desktop-cart-pop-up_list-item-text_value{
+    font-family: var(--Open-font);
+    font-size: 14px;
+    color: #000;
+}
+.desktop-cart-pop-up_list-item_price{
+    font-size: 22px;
+    font-family: var(--Fira-font);
+    color: #000;
+}
+.desktop-cart-pop-up_list-item_img{
+    width: 73px!important;
+    height: auto!important;
+}
+.desktop-cart-pop-up_title h3{
+    color: var(--color-text-secondary);
+    font-size: 22px;
+}
+.desktop-cart-pop-up_title p{
+    color: var(--main-color);
+    font-size: 16px;
+}
+.desktop-cart-pop-up_final-price{
+    font-family: var(--Fira-font);
+    display: flex;
+    justify-content: flex-end;
+}
+.desktop-cart-pop-up_final-price p{
+    color: var(--color-text-secondary);
+    font-size: 18px;
+}
+.desktop-cart-pop-up_final-price span{
+    color: #1D9FE6;
+    font-size: 34px;
+    margin: 0 0 0 12px;
+}
+.desktop-cart-pop-up_wrapper_buttons{
+    margin: 23px 0 0 0;
+    display: flex;
+    justify-content: space-between;
+}
+.desktop-cart-pop-up_link{
+    padding: 14px 0;
+    text-align: center;
+    width: 200px;
+    border-radius: 10px;
+    text-transform: uppercase;
+    font-family: var(--Open-font);
+    font-weight: bold;
+    font-size: 13px;
+}
+.desktop-cart-pop-up_link-cart{
+    border: 2px solid var(--main-color);
+    color: var(--main-color);
+}
+.desktop-cart-pop-up_link-order{
+    color: #fff;
+    border: 2px solid var(--main-color);
+    background: var(--main-color);
+}
 .desktop-profile-pop-up{
     display: none;
     width: 200px;
