brands, slider and fixes

--- a/assets/html/partials/katalog/katalog.html
+++ b/assets/html/partials/katalog/katalog.html
@@ -69,11 +69,11 @@
                           </svg>                                
                      </p>
                      <div class="filter-block">
-                        <input type="text" class="js-range-slider" name="my_range" value="" />
+                        <input type="text" class="js-range-slider_mobile" name="my_range_mobile" value="" />
                         <div class="filter-prices_inputs_wrapper">
-                           <input class="filter-prices_input" type="number" name="min-price_input" id="min-price_input" value="50">
+                           <input class="filter-prices_input" type="number" name="min-price_input" id="min-price_input_mobile" value="50">
                            <span class="filter-prices_input_line"></span>
-                           <input class="filter-prices_input" type="number" name="min-price_input" id="max-price_input" value="5000">
+                           <input class="filter-prices_input" type="number" name="min-price_input" id="max-price_input_mobile" value="5000">
                         </div>
                      </div>
                  </div>
@@ -84,7 +84,7 @@
                             <path d="M5.8753 5.50024C6.24052 5.79242 6.75948 5.79242 7.12469 5.50024L11.7739 1.78087C12.5121 1.19036 12.0945 0 11.1492 0L1.85078 0C0.905503 0 0.487947 1.19036 1.22609 1.78087L5.8753 5.50024Z" fill="black"/>
                         </svg>                                
                     </p>
-                     <div id="type_of_shoes" class="filter-block">
+                     <div class="filter-block type_of_shoes">
                         <label for="Балетки">
                            <input type="checkbox" name="Балетки" id="Балетки">
                            <p>Балетки</p>
@@ -138,7 +138,7 @@
                             <path d="M5.8753 5.50024C6.24052 5.79242 6.75948 5.79242 7.12469 5.50024L11.7739 1.78087C12.5121 1.19036 12.0945 0 11.1492 0L1.85078 0C0.905503 0 0.487947 1.19036 1.22609 1.78087L5.8753 5.50024Z" fill="black"/>
                         </svg>                                
                     </p>
-                     <div id="list_with_checkbox" class="filter-block">
+                     <div class="filter-block list_with_checkbox">
                         <label for="BBT">
                            <input type="checkbox" name="BBT" id="BBT">
                            <p>BBT</p>
@@ -252,7 +252,7 @@
                     <button class="reset-filter">Сбросить настройки</button>
                     <button type="submit" class="search-products">показать <span>35</span> товара</button>
                 </div>
-            </div>
+               </div>
                <div class="main-katalog-wrapper">
                <div class="main-desktop-filter">
                   <div class="filter-item">
@@ -278,7 +278,7 @@
                             <path d="M5.8753 5.50024C6.24052 5.79242 6.75948 5.79242 7.12469 5.50024L11.7739 1.78087C12.5121 1.19036 12.0945 0 11.1492 0L1.85078 0C0.905503 0 0.487947 1.19036 1.22609 1.78087L5.8753 5.50024Z" fill="black"/>
                         </svg>                                
                     </p>
-                     <div id="type_of_shoes" class="filter-block">
+                     <div class="filter-block type_of_shoes">
                         <label for="Балетки_desk">
                            <input type="checkbox" name="Балетки_desk" id="Балетки_desk">
                            <p>Балетки</p>
@@ -332,7 +332,7 @@
                             <path d="M5.8753 5.50024C6.24052 5.79242 6.75948 5.79242 7.12469 5.50024L11.7739 1.78087C12.5121 1.19036 12.0945 0 11.1492 0L1.85078 0C0.905503 0 0.487947 1.19036 1.22609 1.78087L5.8753 5.50024Z" fill="black"/>
                         </svg>                                
                     </p>
-                     <div id="list_with_checkbox" class="filter-block">
+                     <div class="filter-block list_with_checkbox">
                         <label for="BBT_desk">
                            <input type="checkbox" name="BBT_desk" id="BBT_desk">
                            <p>BBT</p>
