--- a/assets/stylesheets/@application.scss
+++ b/assets/stylesheets/@application.scss
@@ -15,3 +15,7 @@
 @import "bem/footer";
 @import "bem/old";
 @import "bem/basket/basket";
+@import "bem/aboutus/aboutus";
+@import "bem/aboutus/delivery";
+@import "bem/aboutus/obmen";
+@import "bem/aboutus/contacts";
