--- a/assets/stylesheets/icons.scss
+++ b/assets/stylesheets/icons.scss
@@ -9,3 +9,19 @@
 .i-empty-basket {
   @include icon('\e902', 'icomoon');
 }
+
+.i-location {
+  @include icon('\e903', 'icomoon');
+}
+
+.i-mail {
+  @include icon('\e904', 'icomoon');
+}
+
+.i-phone {
+  @include icon('\e905', 'icomoon');
+}
+
+.i-time {
+  @include icon('\e906', 'icomoon');
+}
