--- a/assets/stylesheets/defaults.scss
+++ b/assets/stylesheets/defaults.scss
@@ -1,11 +1,11 @@
 body {
-  font-family: 'MuseoSansCyrl', sans-serif;;
+  font-family: 'Open Sans', sans-serif;;
   color: #000000;
   font-size: 14px;
   line-height: 20px;
   font-weight: 400;
   font-style: normal;
-  background: #FAFAFA;
+  -webkit-tap-highlight-color: transparent;
 }
 
 *, *:before, *:after {
@@ -13,9 +13,15 @@ body {
 }
 
 a, button, input, select, textarea, [contenteditable="true"], [tabindex] {
-  color: #000000;
+  color: #071120;
   outline: none;
-  transition: .3s;
+  transition: .5s ease all;
+  resize: none;
+  border: none;
+  text-decoration: none;
+  padding: 0;
+  cursor: pointer;
+  display: block;
 }
 
 // Turn Off Number Input Spinners
@@ -27,4 +33,11 @@ input[type=number]::-webkit-outer-spin-button {
 
 input[type=number] {
   -moz-appearance:textfield;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  transition: background-color 5000s ease-in-out 0s;
 }
